# autonmt

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  install_envs.sh  mkdocs.yml  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements-fairseq.txt  requirements-opennmt.txt  requirements.txt  setup.py
.github/workflows/: docs.yml  python-package.yml
autonlp/: __init__.py  plots.py  toolkits.py  utils.py
autonlp/cmd/: custom_entry.py  fairseq_entry.py  tokenizers_entry.py
autonlp/datasets/: __init__.py  builder.py  dataset.py
autonlp/tasks/: translation.py
autonmt/: __init__.py  plots.py  py_cmd_api.py  utils.py
autonmt/api/: __init__.py  cmd_metrics.py  cmd_tokenizers.py  py_cmd_api.py
autonmt/backends/: __init__.py
autonmt/builder/: builder.py
autonmt/bundle/: enums.py  logger.py  metrics.py  plots.py  report.py  utils.py
autonmt/cmd/: __init__.py  cmd_metrics.py  cmd_tokenizers.py
autonmt/core/: dataset.py  seq2seq.py
autonmt/datasets/: __init__.py  builder.py  dataset.py  dataset_builder.py  encoding.py  hf_loader.py  leakage.py  preprocessing.py  processors.py  stats.py  tokenizers.py
autonmt/evaluation/: metrics.py  significance.py
autonmt/modules/: seq2seq.py
autonmt/preprocessing/: __init__.py  builder.py  dataset.py  hf_loader.py  processors.py  scores.py  tokenizers.py
autonmt/reporting/: figures.py  plots.py  report.py  schema.py
autonmt/search/: __init__.py  beam_search.py  greedy_search.py
autonmt/toolkits/: __init__.py  autonmt.py  autonmt_v2.py  base.py  config.py  fairseq.py
autonmt/utils/: checkpoint_avg.py  enums.py  fileio.py  formatting.py  seed.py
autonmt/vocabularies/: __init__.py  base_vocab.py  bytes_vocab.py  vocab_builder.py  whitespace_vocab.py
docs/: contributing.md  index.md
docs/architecture/: building-blocks.md  layout-and-reproducibility.md  toolkit-abstraction.md
docs/backends/: autonmt.md  fairseq.md  huggingface.md  index.md
docs/concepts/: architecture.md  grid.md  mental-model.md  on-disk-layout.md  philosophy.md  pipeline.md  reproducibility.md
docs/data/: dataset-builder.md  preprocessing-and-encoding.md  tree.txt  tree_dir.txt  vocabularies.md
docs/evaluation/: metrics.md  reports.md
docs/extending/: index.md
docs/how-to/: index.md  (+9 more)
examples/: 01_hello_autonmt.py  02_bring_your_own_data.py  03_preprocessing_and_vocabs.py  04_grid_experiment.py  05_full_grid.py  06_huggingface_baseline_and_finetune.py  07_under_the_hood.py  0_quickstart_hf.py  1_custom_model.py  2_fairseq_model.py  3_fairseq_model.py  3_fairseq_model_test.py  3_multi_run.py  3_plot_results.py  42_dev_tests.py  4_huggingface_model.py  4_plot_results.py  5_custom_model_cf.py  5_huggingface_finetune.py
tests/: test_dummy.py  test_toolkits.py  test_translation.py
(+236 files in other folders)
